fix: post cards shorten to content on smaller screens

--- a/src/styles/posts.scss
+++ b/src/styles/posts.scss
@@ -2,14 +2,17 @@
     
     @media (min-width: 60em) {
         display: flex;
+        > div {
+            min-height: 60vh;
+        }
     }
 
     > div {
         flex: 1 0 25vw;
-        margin: 0 1rem;
+        margin: 0 1rem 1rem;
         border: 2px solid #ccc;
         border-radius: .5rem;
-        min-height: 60vh;
+        
         a {
             color: blue;
             text-decoration: none;
